--- a/D2/NewsPortal/templates/flatpages/default.html
+++ b/D2/NewsPortal/templates/flatpages/default.html
@@ -1,25 +1,32 @@
 <!--bootstrap шаблон-->
 <!doctype html>
 <html lang="en">
+{% load static %}
+{% load custom_tags %}
+{% load filters %}
+{% load cache %}
+
     <head>
+        <title>Login as {{ user }}</title>
+        {% cache 300 head %}
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
         <meta name="generator" content="Hugo 0.108.0">
-        <title>Login as {{ user }}</title>
         <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/blog/">
-        {% load static %}
-        {% load custom_tags %}
-        {% load filters %}
+
         <link href="{% static '/assets/dist/css/bootstrap.min.css' %}" rel="stylesheet">
         <style>.bd-placeholder-img { font-size: 1.125rem; text-anchor: middle; -webkit-user-select: none; -moz-user-select: none; user-select: none; } @media (min-width: 768px) { .bd-placeholder-img-lg {  font-size: 3.5rem; } } .b-example-divider { height: 3rem; background-color: rgba(0, 0, 0, .1); border: solid rgba(0, 0, 0, .15); border-width: 1px 0; box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15); } .b-example-vr { flex-shrink: 0; width: 1.5rem; height: 100vh; } .bi { vertical-align: -.125em; fill: currentColor; } .nav-scroller { position: relative; z-index: 2; height: 2.75rem; overflow-y: hidden; } .nav-scroller .nav { display: flex; flex-wrap: nowrap; padding-bottom: 1rem; margin-top: -1px; overflow-x: auto; text-align: center; white-space: nowrap; -webkit-overflow-scrolling: touch; }</style>
         <!-- Custom styles for this template -->
         <link href="https://fonts.googleapis.com/css?family=Playfair&#43;Display:700,900&amp;display=swap" rel="stylesheet">
         <!-- Custom styles for this template -->
         <link href="{% static 'blog.css' %}" rel="stylesheet">
+        {% endcache head %}
     </head>
+
     <body>
+        {% cache 300 header %}
         <div class="container">
             <header class="blog-header lh-1 py-3">
                 <div class="row flex-nowrap justify-content-between align-items-center">
@@ -35,6 +42,7 @@
                                 <circle cx="10.5" cy="10.5" r="7.5"/>
                                 <path d="M21 21l-5.2-5.2"/>
                             </svg> </a>
+        {% endcache header %}
                         {% if user.is_authenticated %}
                             <a class="btn btn-sm btn-outline-secondary" href="/accounts/logout">Logout</a>
                         {% else %}
@@ -43,7 +51,7 @@
                     </div>
                 </div>
             </header>
-            <div class="nav-scroller py-1 mb-2">
+<!--            <div class="nav-scroller py-1 mb-2">-->
 <!--                <nav class="nav d-flex justify-content-between">-->
 <!--                    <a class="p-2 link-secondary" href="#">Спорт</a>-->
 <!--                    <a class="p-2 link-secondary" href="#">U.S.</a>-->
@@ -58,18 +66,23 @@
 <!--                    <a class="p-2 link-secondary" href="#">Style</a>-->
 <!--                    <a class="p-2 link-secondary" href="#">Travel</a>-->
 <!--                </nav>-->
-            </div>
+<!--            </div>-->
         </div>
-        <main class="container">
 
+        <main class="container">
+{% cache 300 top %}
+            {% block top %}
             <div class="bg-gradient bg-opacity-75 mb-4 p-4 p-md-5 rounded text-bg-dark">
-                {% block top %}
+
                 <div class="col-lg-11 col-md-6 px-0">
                      {% block amount2 %}
                      {% endblock amount2 %}
                 </div>
-                {% endblock top %}
+
             </div>
+            {% endblock top %}
+{% endcache top %}
+{% cache 300 preview %}
             {% block preview %}
             <div class="row mb-2">
                 <div class="col-md-6">
@@ -112,6 +125,7 @@
                 </div>
             </div>
             {% endblock %}
+{% endcache preview %}
             <div class="row g-5">
                 <div class="col-md-8">
                     <article class="blog-post">
@@ -148,6 +162,7 @@
                     {% endif %}
                     </nav>
                 </div>
+                {% cache 3600 archive %}
                 <div class="col-md-4">
                     <div class="position-sticky" style="top: 2rem;">
                         <div class="p-4 mb-3 bg-light rounded">
@@ -171,11 +186,14 @@
                         </div>
                     </div>
                 </div>
+                {% endcache archive %}
             </div>
         </main>
+        {% cache 3600 footer %}
         <footer class="blog-footer">
             <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
             <p> <a href="#">Back to top</a> </p>
         </footer>
+        {% endcache footer %}
     </body>
 </html>
