--- a/D2/NewsPortal/templates/403.html
+++ b/D2/NewsPortal/templates/403.html
@@ -4,6 +4,9 @@
    <meta charset="UTF-8">
    <title>Ошибка 403</title>
 </head>
+{% block amount1 %}
+   Страница не найдена
+{% endblock %}
 <body>
    Кажется, у Вас нет доступа к данной странице...
 </body>
