--- a/D2/NewsPortal/templates/flatpages/default.html
+++ b/D2/NewsPortal/templates/flatpages/default.html
@@ -49,7 +49,8 @@
                                 <path d="M21 21l-5.2-5.2"/>
                             </svg> </a>
         {% endcache header %}
-                        <a class="link-secondary" href=# >{{ user }} </a>
+                        <a class="link-secondary" href=# >{{ user }}</a>
+                        <p>.   .</p>
                         {% if user.is_authenticated %}
                             <a class="btn btn-sm btn-outline-secondary" href="/accounts/logout">Logout</a>
                         {% else %}
@@ -97,19 +98,13 @@
                         <div class="col p-4 d-flex flex-column position-static">
                             <strong class="d-inline-block mb-2 text-primary">Best Post</strong>
                             {% best_post as best_p %}
-                            <h3 class="mb-0">{{best_p.title |censor}}</h3>
-                            <div class="mb-1 text-muted">{{best_p.post_date |date:'d M Y'}}</div>
+                            <h4 class="mb-0">{{ best_p.title |censor }}</h4>
+                            <div class="mb-1 text-muted">{{ best_p.post_date }}</div>
                             <p class="card-text mb-auto">{{ best_p.preview |censor }}</p>
                             <a href="{{best_p.id}}" class="stretched-link">Continue reading</a>
                         </div>
                         <div class="col-auto d-none d-lg-block">
-                            <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg"
-                                 role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"
-                                 focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c"/>
-                                <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-                            </svg>
+                            <IMG src= "{% static 'assets/logo/loginlogo.png' %}" width="200">
                         </div>
                     </div>
                 </div>
@@ -118,7 +113,7 @@
                         <div class="col p-4 d-flex flex-column position-static">
                             <strong class="d-inline-block mb-2 text-success">Most commited</strong>
                             {% most_commented as mc %}
-                            <h3 class="mb-0">{{ mc.title |censor }}</h3>
+                            <h4 class="mb-0">{{ mc.title |censor }}</h4>
                             <div class="mb-1 text-muted">{{ mc.post_date }}</div>
                             <p class="mb-auto">{{ mc.preview |censor }}</p>
                             <a href="{{mc.id}}" class="stretched-link">Continue reading</a>
