--- a/D2/NewsPortal/templates/news.html
+++ b/D2/NewsPortal/templates/news.html
@@ -18,7 +18,7 @@
     {% block content %}
         {% block search %}{% endblock search %}
         {% for post in posts %}
-        <a href="{{post.id}}" class="blog-post-title mb-1"><i>{{post.title |censor }}</i></a>
+        <a href="{{post.id}}" class="blog-post-title"><i>{{post.title |censor }}</i></a>
         <p class="blog-post-meta">{{post.post_date  |date:'d M Y'}}</p>
         <p> {{post.preview |censor }} </p>
         {% endfor %}
