--- a/D2/NewsPortal/templates/post.html
+++ b/D2/NewsPortal/templates/post.html
@@ -20,16 +20,8 @@
  <h2 class="blog-post-title mb-1">{{ post.title |censor }}</h2>
         <p class="blog-post-meta">{{ post.post_date }} Author: <a href="#">{{post.author}}</a></p>
         <p> {{post.post_text |censor }} </p>
-{% comments post.id as coms %}
-{% if coms %}
-        <hr>
-        <h5>Comments:</h5>
 
-        {% for comment in coms %}
-        <p align = right ><i>{{ comment.time }}<b>{{ comment.user_comment }}</b></i></p>
-        <p align = right >{{ comment.text_comment }}</p>
-        {% endfor %}
-{% endif %}
+
 {% if perms.newsapp.change_post or perms.newsapp.delete_post %}
         {# добавляем проверку что пользователь является автором этого поста #}
         {# когда появятся модераторы и редакторы прийдется сделать проверку и для них #}
@@ -37,5 +29,17 @@
             <a class="btn btn-outline-primary rounded-pill" href="{{ post.id }}/edit">Edit</a>
             <a class="btn btn-outline-primary rounded-pill" href="{{ post.id }}/delete">Delete</a>
         {% endif %}
+{% endif %}
+
+{% if comments %}
+        <hr>
+        <h5><i>{{number_comments}} comments:</i></h5>
+
+        {% for comment in comments %}
+
+                <p align = right ><i> {% publish_time comment.time %} <b> {{ comment.user }} </b></i></p>
+                <p align = left > {{ comment.text }} </p>
+
+        {% endfor %}
 {% endif %}
 {% endblock content %}
